--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,14 @@
+{% extends 'layout.html' %}
+
+{% block title %}
+    Home
+{'% endblock '}
+
+{% block content %}
+<H1>About</H1>
+<p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles below: . Return to <a href="/">Home</a></p>
+{% endblock %}
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
