--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Home
+{'% endblock '}
+
+{% block content %}
     <H1>Home</H1>
-    <p>Check out this app that will save your life within a short time by making you able to consult a qualified medical doctor online. To know more about us please visit our <a href="/about">about</a></p>
-</body>
-</html>
+    <p>Check out this app that will save your life within a short time by making you able to consult a qualified medical doctor online. To know more about us please visit our <a href="/about">About</a></p>
+{% endblock %}
