Added Doctors List page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,26 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Home
-{'% endblock '}
+    About
+{% endblock %}
 
 {% block content %}
 <H1>About</H1>
 <p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles below: . Return to <a href="/">Home</a></p>
 {% endblock %}
 
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/main.js' %}" defer></script>
-</head>
-<body>
-    <H1>About</H1>
-    <p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles below: . Return to <a href="/">Home</a></p>
-</body>
-</html>
