--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/">🏠</a> |
         <a href="/about">😊</a> |
-        <a href="/">🩺</a>
+        <a href="/Doctors">🩺</a>
     </nav>
     <main>
         {% block content %}
