--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<H1>About</H1>
-<p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles below: . Return to <a href="/">Home</a></p>
+<H1>ABOUT US</H1>
+<p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles. Return to <a href="/">Home Page</a></p>
 {% endblock %}
 
