--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    <H1>Home</H1>
-    <p>Check out this app that will save your life within a short time by making you able to consult a qualified medical doctor online. To know more about us please visit our <a href="/about">About</a></p>
+    <H1>HOME</H1>
+    <p>Check out this app that will save your life within a short time by making you able to consult a qualified medical doctor online. To know more about us please visit our <a href="/about">About Page</a></p>
 {% endblock %}
