Changed file names and naming conventions to be consistent with Django conventions.

--- a/Doctors/templates/Doctors/Doctors_list.html
+++ b/Doctors/templates/Doctors/Doctors_list.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Doctors
+    Doctors List
 {% endblock %}
 
 {% block content %}
     <section>
-    <H1>Doctors</H1>
+    <H1>List of Doctors</H1>
 
     {% for Doctors in Doctors %}
         <article class="Doctors">
