--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<H1>ABOUT US</H1>
+<h1>ABOUT US</h1>
 <p>MEDTECH is a subsidiary of VENTURE TRIBE. Contact us through any of our social media handles. Return to <a href="/">Home Page</a></p>
 {% endblock %}
 
