--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <nav>
-        <a href="/">🏠</a> |
-        <a href="/about">😊</a> |
-        <a href="/Doctors">🩺</a>
+        <a href="/"><span role="img" aria-label="Home">🏠</span></a>
+        <a href="/about"><span role="img" aria-label="About">😊</span></a>
+        <a href="{% url 'Doctors:list' %}"><span role="img" aria-label="Doctors">🩺</span></a>
     </nav>
     <main>
         {% block content %}
